--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       </div>
 
       <a href="index.html" class="active"><i class="bi bi-house-door"></i> Dashboard</a>
-      <a href="profil.html"><i class="bi bi-person-circle"></i> Profil</a>
-      <a href="datasiswa.html"><i class="bi bi-people"></i> Data Siswa</a>
-      <a href="inputkas.html"><i class="bi bi-cash-coin"></i>Bayar Kas</a>
-      <a href="pengeluarankas.html"><i class="bi bi-receipt"></i> Pengeluaran</a>
+      <a href="other/profil.html"><i class="bi bi-person-circle"></i> Profil</a>
+      <a href="other/datasiswa.html"><i class="bi bi-people"></i> Data Siswa</a>
+      <a href="other/inputkas.html"><i class="bi bi-cash-coin"></i>Bayar Kas</a>
+      <a href="other/pengeluarankas.html"><i class="bi bi-receipt"></i> Pengeluaran</a>
       <div class="d-flex justify-content-end p-3 gap-2">
         <button id="resetSemua" class="btn btn-danger">Reset Data</button>
-        <a href="login.html" class="btn btn-secondary">Logout</a>
+        <a href="other/login.html" class="btn btn-secondary">Logout</a>
       </div>
     </nav>
 
